adding authentication - fixing user service

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
-PORT=5001
+PORT=3000
 MONGODB_URI="mongodb+srv://eslammoataz:admin@cluster0.8kimziq.mongodb.net/Pharmacy"
+JWT_SECRET_KEY="secretKey"
