fixing auth and adding forget password

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,10 @@
 PORT=3000
 MONGODB_URI="mongodb+srv://eslammoataz:admin@cluster0.8kimziq.mongodb.net/Pharmacy"
 JWT_SECRET_KEY="secretKey"
+
+
+EMAIL_HOST=smtp.gmail.com
+EMAIL_USER= "eslammoataz221@gmail.com"
+EMAIL_PASSWORD= "qjpm qsos dylj cyts"
+EMAIL_PORT= 465
+EMAIL_USE_TLS=TRUE / FALSE
